# tensorio-tensorflow-android

./: .gitignore  README.md  build.gradle  jitpack.sh  jitpack.yml  settings.gradle
distribution/tensorflow/include/tensorflow/contrib/boosted_trees/proto/: learner.pb.h  quantiles.pb.h  split_info.pb.h  tree_config.pb.h
distribution/tensorflow/include/tensorflow/core/protobuf/: eager_service.pb.h
gradle/wrapper/: gradle-wrapper.properties
javaexample/: build.gradle
javaexample/src/androidTest/java/ai/doc/javaexample/: ExampleInstrumentedTest.java
javaexample/src/main/: AndroidManifest.xml
javaexample/src/main/java/ai/doc/javaexample/: MainActivity.java
javaexample/src/main/res/layout/: activity_main.xml
javaexample/src/main/res/values/: strings.xml
tensorflow/: build.gradle
tensorflow/src/androidTest/java/ai/doc/tensorflow/: ExampleInstrumentedTest.java  SavedModelBundleTest.java
tensorflow/src/main/: AndroidManifest.xml
tensorflow/src/main/cpp/: CMakeLists.txt  jni_utils.cpp  jni_utils.h  native-lib.cpp  saved_model_bundle_jni.cpp  tensor_jni.cpp  tensor_jni.h
tensorflow/src/main/java/ai/doc/tensorflow/: AndroidAssets.java  DataType.java  NativeLibrary.java  SavedModelBundle.java  Tensor.java  Test.java
tensorflow/src/test/java/ai/doc/tensorflow/: ExampleUnitTest.java
